2009-03-01  Les Harris  <lharris@gnome.org>

	* src/debug-logger.c (debug_logger_init),
	(debug_logger_clear_clicked): Can now clear the log.
	* ui/main.glade: Added Clear button to logger.

2009-03-01  Les Harris  <lharris@gnome.org>

	* src/debug-logger.c (debug_logger_log_func): Now scrolls to the
	newest item.
	* src/gnome-mud.c (main): Fixed use-color property setting.
	* src/mud-telnet-handlers.c (MudHandler_ZMP_HandleSubNeg):
	* src/mud-telnet-msp.c (mud_telnet_msp_process_command):
	* src/mud-telnet-zmp.c (mud_zmp_send_command):
	* src/mud-telnet.c (mud_telnet_send_charset_req),
	(mud_telnet_send_sub_req), (mud_telnet_handle_positive_nego),
	(mud_telnet_handle_negative_nego): Added logging.

2009-03-01  Les Harris  <lharris@gnome.org>

	* src/debug-logger.c (debug_logger_get_property): Added get method for
	use-color property.

2009-03-01  Les Harris  <lharris@gnome.org>

	* src/debug-logger.[ch] (debug_logger_init),
	(debug_logger_class_init), (debug_logger_set_property),
	(debug_logger_get_property), (debug_logger_copy_clicked),
	(debug_logger_log_func): Added parameters for color use and color
	customization.
	* src/gnome-mud.c (main): Enable colored output in logger.

2009-02-28  Les Harris  <lharris@gnome.org>

	* src/debug-logger.c (debug_logger_init), (debug_logger_finalize),
	(debug_logger_save_clicked), (debug_logger_copy_clicked),
	(debug_logger_select_clicked), (debug_logger_log_func),
	(debug_logger_add_domain), (debug_logger_remove_domain): Now frees
	domain handlers on remove.  UI dims/undims as needed. Added Type
	column in treeview.  Wrapped text in gettext macros.
	* src/gnome-mud.c (main): Temp log spam added.
	* ui/main.glade: Added accelerators for the debug logger's ui.

2009-02-28  Les Harris  <lharris@gnome.org>

	* configure.ac: Added autofoo for debug logger, off by default.
	* src/Makefile.am: Autofoo for debug logger.
	* src/debug-logger.[ch]: New files which implement the debug logger. 