@@ -1,5 +1,12 @@
 2009-03-01  Les Harris  <lharris@gnome.org>
 
+	* src/gnome-mud.c (main): Removed faux errors and messages.
+	* src/mud-telnet-handlers.c (MudHandler_MCCP_Enable),
+	(MudHandler_MCCP_Disable), (MudHandler_MCCP_HandleSubNeg): Log the
+	various MCCP states.
+
+2009-03-01  Les Harris  <lharris@gnome.org>
+
 	* src/debug-logger.c (debug_logger_init),
 	(debug_logger_clear_clicked): Can now clear the log.
 	* ui/main.glade: Added Clear button to logger.
